﻿Release Notes
=============

Version 1.4.4
-------------
- Improvement: confirmation dialog on close is now optional

Version 1.4.3
-------------
- Bug fix: firefox proxy override now use , instead of ; (like explorer)


Version 1.4.2
-------------
- Bug fix: during saving of profile, an exception was throws.


Version 1.4.1
-------------
- Bug fix: run profile from tray area now work without exception

Version 1.4.0
-------------
- Improvement: application can start in different mode:
		- normal mode
		- tray area (in the tray area appeare logo of application)
		- smart view
- Improvement: add tray area mode in smart button (telescope icon)
- Improvement: in tray area mode:
		- double click of icon restore normal view
		- right click of mouse is associated to a context menu for:
			- run autodetect
			- run profile
			- close application
- Improvement: during initialization of application:
		- optional check for version
		- optional autodetectcan be run
- Improvement: if firefox is running when profile is applyed, it is shutdown and restarted.
- Bug fix: Immediate proxy settings changing (Chrome bug) (Tnx to anonymous user who suggested solution too!)
- Improvement: introduced Options windows to modify application configuration.
- Improvement: during execution of profile or autodectect is no possibile anymore:
		- Enable/disable network card
		- Save/delete/create/duplicate profile
		- run profile or autodetect	
- Bug fix: autodetect algo now order profile by network card type and speed.
- Improvement: add more messages during autodetect
- Improvement: introduced profile reorder for profiles: now it is possibile to define the order in which
	profiles are displayed.

Version 1.3.0
-------------
- Bug fix: introduced minimun size to avoid ribbon problem
- Improvement: removed firt ribbon panel. Now all operations about profile are in same place
- Improvement: add profile list button in ribbon panel to display list of profile